<resources>
    <string name="app_name">Perishable Charitables</string>
    <string name="sign_up">Don\'t have an account? Sign up here!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="re_enter_password_hint">Re-enter Password</string>
    <string name="login_button">Login</string>
    <string name="create_account">Create Account</string>
    <string name="login_here">Have an account already? Login here!</string>
    <string name="supermarket">Supermarket</string>
    <string name="NGO">Non-governmental organization</string>
    <string name="Name_Org">Organization Name</string>
    <string name="Address_Org">Address</string>
    <string name="Contact_Org">Contact Number</string>
    <string name="Save_Org_Details">Save Details</string>
    <string name="Type_Org">Organization Type:</string>
    <string name="Edit_Details">Edit Details</string>
    <string name="Loading">Loading</string>
    <string name="Item_Name">Item Name</string>
    <string name="How_To_Collect">How To Collect</string>
    <string name="Item_Donated_By">Item Donated By</string>
    <string name="Item_Description">Item Description</string>
    <string name="Manufactured_Date">Manufactured Date</string>
    <string name="Expiry_Date">Expiry Date</string>
    <string name="Quantity">Quantity</string>
    <string name="Accept_Offer">Accept Offer</string>
    <string name="Item_Collected_From">Item Collected From</string>
    <string name="Item_Accepted_From">Item Accepted By</string>
    <string name="Cancel_Order">Cancel Order</string>
    <string name="Item_Collected_By">Item Collected By</string>
    <string name="Collected">Item Collected</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="Upload_Image_Button">Choose Image From Gallery</string>
    <string name="Upload_Item">Upload Item</string>
    <string name="Logout_Button">Logout</string>
    <string name="reset_password">Forgot password? Reset here!</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Reset_Password_Instruction">We just need your registered email to send you password reset instructions.</string>
    <string name="Reset_Password">Reset Password</string>
</resources>
