<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo_red"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="14dp"
            android:layout_gravity="center_horizontal" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/orgType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Type_Org"
                android:textSize="14dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <RadioButton android:id="@+id/supermarket_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textColor="@color/weldonBlue"
                android:text="@string/supermarket"
                android:layout_marginTop="8dp"
                android:onClick="onRadioItemClick"/>
            <RadioButton android:id="@+id/NGO_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NGO"
                android:textSize="16dp"
                android:textColor="@color/weldonBlue"
                android:onClick="onRadioItemClick"/>
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/organization_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/Name_Org" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/organization_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:hint="@string/Address_Org"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/organization_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/Contact_Org"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/saveDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="@string/Save_Org_Details"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>