<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="softwareengineering.assignment.sharify.NGOViewAcceptedItemDetailsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:paddingBottom="24dp">

        <ImageView
            android:id="@+id/itemPhoto"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/viewItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/red_primary"
            android:textSize="19dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Item_Accepted_From"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/weldonBlue"/>

        <TextView
            android:id="@+id/itemDonator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueGray_mainText"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Item_Description"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/weldonBlue"/>

        <TextView
            android:id="@+id/viewItemDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueGray_mainText"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Manufactured_Date"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/weldonBlue"/>

        <TextView
            android:id="@+id/viewManufactured"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueGray_mainText"
            android:textSize="18dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Expiry_Date"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/weldonBlue"/>

        <TextView
            android:id="@+id/viewExpiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueGray_mainText"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Quantity"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/weldonBlue"/>

        <TextView
            android:id="@+id/viewQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueGray_mainText"
            android:textSize="18dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/How_To_Collect"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/weldonBlue"/>

        <TextView
            android:id="@+id/viewCollectionMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueGray_mainText"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Contact_Org"
            android:textSize="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="3dp"
            android:textColor="@color/weldonBlue"/>

        <TextView
            android:id="@+id/viewContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/blueGray_mainText"
            android:textSize="18dp"
            android:layout_marginBottom="18dp"/>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cancel_Order"
            android:textColor="@color/offWhite_background"
            android:padding="5dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</ScrollView>
